--- a/MattParty/app/src/main/res/layout/activity_info.xml
+++ b/MattParty/app/src/main/res/layout/activity_info.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.adam.mattparty.InfoActivity">
+    tools:context="com.example.adam.mattparty.InfoActivity"
+    android:background="@color/colorPrimary"
+    >
 
     <GridLayout
         android:layout_width="332dp"
@@ -22,7 +24,8 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/address" />
+            android:text="@string/address"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -30,7 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="1"
-            android:text="@string/how_to_get_there" />
+            android:text="@string/how_to_get_there"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView7"
@@ -38,7 +42,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="0"
-            android:text="@string/_68_finchfield_road_west" />
+            android:text="@string/_68_finchfield_road_west"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView8"
@@ -46,7 +51,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="1"
-            android:text="@string/bus_no_3_from_town" />
+            android:text="@string/bus_no_3_from_town"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView9"
@@ -54,7 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="2"
-            android:text="@string/drive_limited_parking_available" />
+            android:text="@string/drive_limited_parking_available"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView5"
@@ -62,7 +69,8 @@
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="3"
-            android:text="@string/what_is_on" />
+            android:text="@string/what_is_on"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView6"
@@ -70,7 +78,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="4"
-            android:text="@string/fibbage" />
+            android:text="@string/fibbage"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView10"
@@ -78,7 +87,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="5"
-            android:text="@string/shots_and_ladders_xl" />
+            android:text="@string/shots_and_ladders_xl"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView11"
@@ -86,7 +96,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="6"
-            android:text="@string/bbq" />
+            android:text="@string/bbq"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView12"
@@ -94,7 +105,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="7"
-            android:text="@string/live_music" />
+            android:text="@string/live_music"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView13"
@@ -102,7 +114,8 @@
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="8"
-            android:text="@string/can_i_bring_alcohol" />
+            android:text="@string/can_i_bring_alcohol"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView14"
@@ -110,7 +123,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="9"
-            android:text="@string/the_more_the_merrier" />
+            android:text="@string/the_more_the_merrier"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView15"
@@ -118,7 +132,8 @@
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="10"
-            android:text="@string/what_time_should_i_arrive" />
+            android:text="@string/what_time_should_i_arrive"
+            android:textColor="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/textView16"
@@ -126,7 +141,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="11"
-            android:text="@string/the_event_is_from_3pm_till_late" />
+            android:text="@string/the_event_is_from_3pm_till_late"
+            android:textColor="@color/colorAccent"/>
 
     </GridLayout>
 
@@ -141,5 +157,8 @@
         android:onClick="backMessage"
         android:text="@string/done"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="8dp"
+        android:textColor="@color/colorAccent"
+        android:background="@color/colorButtons"/>
 </android.support.constraint.ConstraintLayout>
