--- a/MattParty/app/src/main/res/layout/activity_selection.xml
+++ b/MattParty/app/src/main/res/layout/activity_selection.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.adam.mattparty.SelectionActivity">
+    tools:context="com.example.adam.mattparty.SelectionActivity"
+    android:background="@color/colorPrimary"
+    android:onClick="playMessage"
+    >
 
     <Button
         android:id="@+id/where_button"
@@ -14,8 +17,12 @@
         android:layout_marginTop="8dp"
         android:onClick="whereMessage"
         android:text="@string/where_is_it"
+        android:background="@color/colorButtons"
+        android:textColor="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="8dp"
+        />
 
     <Button
         android:id="@+id/when_button"
@@ -25,8 +32,11 @@
         android:layout_marginTop="8dp"
         android:onClick="whenMessage"
         android:text="@string/when_is_it"
+        android:background="@color/colorButtons"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="8dp" />
 
     <Button
         android:id="@+id/sign_up_button"
@@ -36,8 +46,11 @@
         android:layout_marginEnd="8dp"
         android:onClick="regMessage"
         android:text="@string/sign_up"
+        android:background="@color/colorButtons"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="8dp" />
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -48,6 +61,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/cinco_de_mayo"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +77,9 @@
         android:layout_marginStart="8dp"
         android:onClick="infoMessage"
         android:text="@string/info"
+        android:background="@color/colorButtons"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="8dp" />
 </android.support.constraint.ConstraintLayout>
