--- a/MattParty/app/src/main/res/layout/activity_when.xml
+++ b/MattParty/app/src/main/res/layout/activity_when.xml
@@ -10,6 +10,7 @@
     android:layout_alignStart="@id/activity_main"
     android:layout_alignLeft="@id/activity_main"
     android:layout_alignBottom="@id/activity_main"
+    android:background="@color/colorPrimary"
     >
 
     <TextView
@@ -66,7 +67,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/days"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorAccent"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -103,7 +104,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/hours"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorAccent"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -139,7 +140,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/minutes"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorAccent"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -175,7 +176,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/seconds"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorAccent"
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
@@ -203,6 +204,10 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:onClick="backMessage"
-        android:text="@string/done" />
+        android:text="@string/done"
+        android:textColor="@color/colorAccent"
+        android:background="@color/colorButtons"
+
+        />
 
 </RelativeLayout>
