--- a/MattParty/app/src/main/res/values/colors.xml
+++ b/MattParty/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#407caa</color>
+    <color name="colorPrimaryDark">#582A72</color>
+    <color name="colorAccent">#D5EF9F</color>
+    <color name="colorButtons">#133A57</color>
 </resources>
